# substrate

client/authority-discovery/: Cargo.toml
client/consensus/common/: Cargo.toml
client/network/: Cargo.toml
client/network-gossip/: Cargo.toml
client/network/common/: Cargo.toml
client/network/test/: Cargo.toml
client/offchain/: Cargo.toml
client/peerset/: Cargo.toml
client/telemetry/: Cargo.toml
frame/contracts/: Cargo.toml  README.md
frame/contracts/src/: debug.rs  exec.rs  lib.rs
frame/support/: Cargo.toml
