[package]
name = "pallet-contracts"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for WASM contracts"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = "1.3"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
smallvec = { version = "1", default-features = false, features = [
	"const_generics",
] }
wasmi = { version = "0.30", default-features = false }
impl-trait-for-tuples = "0.2"

# Only used in benchmarking to generate contract code
wasm-instrument = { version = "0.4", optional = true, default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
environmental = { version = "1.1.4", default-features = false }
frame-benchmarking = { version = "22.0.0", default-features = false, optional = true }
frame-support = { version = "22.0.0", default-features = false }
frame-system = { version = "22.0.0", default-features = false }
pallet-balances = { version = "22.0.0", optional = true, default-features = false }
pallet-contracts-primitives = { version = "25.0.0", default-features = false }
pallet-contracts-proc-macro = { version = "13.0.0" }
sp-api = { version = "20.0.0", default-features = false }
sp-core = { version = "22.0.0", default-features = false }
sp-io = { version = "24.0.0", default-features = false }
sp-runtime = { version = "25.0.0", default-features = false }
sp-std = { version = "9.0.0", default-features = false }

[dev-dependencies]
array-bytes = "6.1"
assert_matches = "1"
env_logger = "0.9"
pretty_assertions = "1"
wat = "1"

# Substrate Dependencies
pallet-balances = { version = "22.0.0" }
pallet-timestamp = { version = "21.0.0" }
pallet-insecure-randomness-collective-flip = { version = "10.0.0" }
pallet-utility = { version = "22.0.0" }
pallet-proxy = { version = "22.0.0" }
sp-keystore = { version = "28.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"wasm-instrument/std",
	"wasmi/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-proc-macro/full",
	"log/std",
	"rand/std",
	"environmental/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"rand",
	"rand_pcg",
	"wasm-instrument",
]
try-runtime = ["frame-support/try-runtime"]
